<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="drawer_title_home">Home</string>
    <string name="drawer_title_info">Information</string>
    <string name="drawer_title_info_device" translatable="false">@string/device</string>
    <string name="drawer_title_controls">Controls</string>
    <string name="drawer_title_controls_file_system" translatable="false">@string/file_system</string>
    <string name="drawer_title_tools">Tools</string>
    <string name="drawer_title_tools_app_manager" translatable="false">@string/app_manager</string>
    <string name="drawer_title_more_about">About</string>
    <string name="drawer_title_more_privacy">Privacy</string>
    <string name="action_press_again">Press once again to exit!</string>
    <string name="community">Community</string>
    <string name="community_message">If you need help, have feedback, ideas or feature requests or if you just want to discuss,
        you can join our <b>Google+ community</b>.\n\nWith joining the community, you can also participate in BETA tests.\nBETA
        builds can be less stable, but you will get more frequent updates with the latest features and fixes.
    </string>
    <string name="join_beta_test">Join BETA</string>
    <string name="view_community">View community</string>
    <string name="clock_speed">Clock speed</string>
    <string name="cores">Cores</string>
    <string name="device">Device</string>
    <string name="device_information">Device information</string>
    <string name="general">General</string>
    <string name="sensors">Sensors</string>
    <string name="name">Name</string>
    <string name="arch">Architecture</string>
    <string name="version">Version</string>
    <string name="features">Features</string>
    <string name="platform_information">Platform information</string>
    <string name="build_id">Build id</string>
    <string name="android_id">Android id</string>
    <string name="runtime">Runtime</string>
    <string name="type">Type</string>
    <string name="tags">Tags</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="product">Product</string>
    <string name="board">Board</string>
    <string name="radio_version">Radio version</string>
    <string name="build_date">Build date</string>
    <string name="processor">Processor</string>
    <string name="extras">Extras</string>
    <string name="kernel">Kernel</string>
    <string name="hardware">Hardware</string>
    <string name="toolchain">Toolchain</string>
    <string name="host">Host</string>
    <string name="memory">Memory</string>
    <string name="total">Total</string>
    <string name="free">Free</string>
    <string name="cached">Cached</string>
    <string name="bootloader">Bootloader</string>
    <string name="selinux_enforcing">Enforcing</string>
    <string name="selinux_permissive">Permissive</string>
    <string name="unknown">Unknown</string>
    <string name="emmc_rev">Revision</string>
    <string name="emmc_date">Date</string>
    <string name="emmc_can_brick">Issues</string>
    <string name="emmc_can_brick_true">Your eMMC is known to cause issues!</string>
    <string name="emmc_can_brick_false">Your eMMC should be safe!</string>
    <string name="press_learn_more">Press to learn more…</string>
    <string name="frequency_available">Available frequencies</string>
    <string name="frequency_current">Current frequency</string>
    <string name="frequency_max">Maximum frequency</string>
    <string name="frequency_min">Minimum frequency</string>
    <string name="sensor_information">Show sensor information</string>
    <string name="sensor_information_summary">View detailed information about your sensors</string>
    <string name="wizard_finish">Finish</string>
    <string name="wizard_next">Next</string>
    <string name="wizard_previous">Previous</string>
    <string name="wizard_skip">Skip</string>
    <string name="wizard_welcome_notice">Welcome to Device Control!\n\nYou can get the most features with a rooted device.\nPlease
        be aware that without root the functionality is limited!\n\nReady?\nSo let\'s get you set up! :)
    </string>
    <string name="wizard_finish_notice">You are all set up, thanks for your patience!\n\nIf you need help or have any questions,
        please do not hesitate to ask.\n\nFor now, have fun using Device Control! :)
    </string>
    <string name="donate_heart">Donate \u2665</string>
    <string name="donate_value">Donate %s</string>
    <string name="donate_subscription">Use subscription</string>
    <string name="donate_subscription_note">Note: Subscriptions are monthly!</string>
    <string name="donate_via">Donate via %s</string>
    <string name="donate_paypal_message">This will redirect you to PayPal to complete the donation.</string>
    <string name="show_pollfish">Activate Pollfish</string>
    <string name="show_pollfish_summary">For every taken survey you help us to grow. Feel free to deactivate it, of course :)
    </string>
    <string name="about_device_control_text">Device Control got started as i needed a tool to easily control my custom
        kernel.\n\nLater i also needed some extra features, which no other app could offer or i had to use multiple different apps
        to achieve the functionality i wanted to have.\n\nStep by step more functionality got added into Device Control and it
        still keeps growing.\n\nDevice Control is open source and available for free, however if you want to support development
        of this app, please consider a donation.\n\nEvery donation is much appreciated and keeps me motivated :)
    </string>
    <string name="permissions">Permissions</string>
    <string name="no_permissions">No permissions required</string>
    <string name="perm_costs_money">this may cost you money</string>
    <string name="perms_new_perm_prefix">
        <font fgcolor="#ff33b5e5" size="12">NEW:</font>
    </string>
    <string name="perms_description_app">Provided by<xliff:g id="app_name">%1$s</xliff:g>.
    </string>
    <string name="join_two_items">
        <xliff:g id="first_item">%1$s</xliff:g>
        and
        <xliff:g id="second_item">%2$s</xliff:g>
    </string>
    <string name="join_many_items_last">
        <xliff:g id="all_but_last_item">%1$s</xliff:g>
        and
        <xliff:g id="last_item">%2$s</xliff:g>
    </string>
    <string name="security_settings_desc">This app can access the following on your devices:</string>
    <string name="security_settings_desc_multi" product="default">This app can access the following on your phone. In order to
        improve performance and reduce memory usage, some of these permissions are available to
        <xliff:g id="base_app_name">%1$s</xliff:g>
        because it runs in the same process as<xliff:g id="additional_apps_list">%2$s</xliff:g>:
    </string>
    <string name="app_manager">App manager</string>
    <string name="message_loading">Loading, please stand by…</string>
    <string name="no_items_found">No items found…</string>
    <string name="disabled">Disabled</string>
    <string name="user">User</string>
    <string name="system">System</string>
    <string name="open">Open</string>
    <string name="could_not_launch_activity">Could not launch activity</string>
    <string name="app_details">Application details</string>
    <string name="app_size">Application size</string>
    <string name="force_stop">Force stop</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_data">Clear data</string>
    <string name="app">Application</string>
    <string name="ext_app">External application</string>
    <string name="data">Data</string>
    <string name="ext_data">External data</string>
    <string name="ext_media">External media</string>
    <string name="ext_obb">External obb</string>
    <string name="ext_cache">External cache</string>
    <string name="ext">External</string>
    <string name="cache">Cache</string>
    <string name="enable">Enable</string>
    <string name="enable_msg">%s will be enabled.\n\nContinue?</string>
    <string name="enable_msg_multi">%s apps will be enabled.\n(If any app is already enabled, nothing will happen)\n\nContinue?
    </string>
    <string name="enable_msg_multi_action">Enabling app
        <xliff:g example="10" id="value">%d</xliff:g>
        of
        <xliff:g example="71" id="value">%d</xliff:g>
    </string>
    <string name="disable">Disable</string>
    <string name="disable_msg">%s will be disabled.\n\nContinue?</string>
    <string name="disable_msg_multi">%s apps will be disabled.\n(If any app is already disabled, nothing will
        happen)\n\nContinue?
    </string>
    <string name="disable_msg_multi_action">Disabling app
        <xliff:g example="10" id="value">%d</xliff:g>
        of
        <xliff:g example="71" id="value">%d</xliff:g>
    </string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstalling">Uninstalling…</string>
    <string name="uninstall_msg">Do you really want to uninstall \"%s\"?\nThis action can not be undone!</string>
    <string name="uninstall_msg_multi">Do you really want to uninstall %s apps?\nThis action can not be undone!</string>
    <string name="uninstall_msg_multi_action">Uninstalling app
        <xliff:g example="10" id="value">%d</xliff:g>
        of
        <xliff:g example="71" id="value">%d</xliff:g>
    </string>
    <string name="uninstall_msg_system_app">Uninstalling system apps may require a reboot!</string>
    <string name="uninstall_success">Successfully uninstalled \"%s\"</string>
    <string name="pm_has_died">Android package manager died… :/\n\nThis can happen on some devices, please try refreshing until it
        works.
    </string>
    <string name="file_system">File system</string>
    <string name="automatic_fstrim">Automatic fstrimming</string>
    <string name="automatic_fstrim_summary">Fstrim is used to discard (or \"trim\") blocks which are not in use by the
        filesystem.\nThis can improve performance and reduce lags.
    </string>
    <string name="fstrim_interval">Fstrim interval</string>
    <string name="io_scheduler">I/O scheduler</string>
    <string name="io_scheduler_config">Configuration</string>
    <string name="io_scheduler_config_summary">Configure the %s I/O scheduler</string>
    <string name="none">None</string>
    <string name="fifteen_seconds">15 seconds</string>
    <string name="thirty_seconds">30 seconds</string>
    <string name="one_minute">1 Minute</string>
    <string name="five_minutes">5 Minutes</string>
    <string name="ten_minutes">10 Minutes</string>
    <string name="fifteen_minutes">15 Minutes</string>
    <string name="twenty_minutes">20 Minutes</string>
    <string name="thirty_minutes">30 Minutes</string>
    <string name="one_hours">1 Hour</string>
    <string name="two_hours">2 Hours</string>
    <string name="four_hours">4 Hours</string>
    <string name="eight_hours">8 Hours</string>
    <string name="grant">Grant</string>
    <string name="granted">Granted</string>
    <string name="perm_intro_title">Required permissions</string>
    <string name="perm_intro_message">Starting with Android M (6.0), the user needs to explicitly allow permissions, else apps can
        not make use of them.\n\nBelow you can find the required permissions of Device Control with an explanation why they are
        needed.\n\nNote: If you do not grant all required permissions, some features may be limited!
    </string>
    <string name="perm_storage">Storage</string>
    <string name="perm_storage_explanation">Storage access is needed to cache files on the external storage and for file
        interactions to work.
    </string>
    <string name="action_completed">Action completed successfully!</string>
    <string name="applying_wait">Applying, please wait…</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
</resources>