<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 - 2015 Alexander Martinz
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:checkable="true"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/drawer_title_home" />
    </group>
    <!-- information subheader -->
    <group
        android:id="@+id/group_information"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_info"
            android:title="@string/drawer_title_info">
            <menu>
                <item
                    android:id="@+id/nav_item_info_device"
                    android:checkable="true"
                    android:icon="@drawable/ic_perm_device_info_24dp"
                    android:title="@string/drawer_title_info_device" />
            </menu>
        </item>
    </group>
    <!-- controls subheader -->
    <group
        android:id="@+id/group_controls"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_controls"
            android:title="@string/drawer_title_controls">
            <menu>
                <item
                    android:id="@+id/nav_item_controls_file_system"
                    android:checkable="true"
                    android:icon="@drawable/ic_server_24dp"
                    android:title="@string/drawer_title_controls_file_system" />
            </menu>
        </item>
    </group>
    <!-- tools subheader -->
    <group
        android:id="@+id/group_tools"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_tools"
            android:title="@string/drawer_title_tools">
            <menu>
                <item
                    android:id="@+id/nav_item_tools_app_manager"
                    android:checkable="true"
                    android:icon="@drawable/ic_adb_24dp"
                    android:title="@string/drawer_title_tools_app_manager" />
            </menu>
        </item>
    </group>
    <!-- more subheader -->
    <group
        android:id="@+id/group_more"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_more_about"
            android:checkable="true"
            android:title="@string/drawer_title_more_about" />
        <item
            android:id="@+id/nav_item_more_privacy"
            android:checkable="false"
            android:title="@string/drawer_title_more_privacy" />
    </group>
    <!-- footer -->
    <group
        android:id="@+id/group_footer"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item_footer_version"
            android:title="@string/version" />
    </group>
</menu>
