<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 - 2015 Alexander Martinz
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Opens the sensor test screen on press -->
    <alexander.martinz.libs.materialpreferences.MaterialPreference
        android:id="@+id/sensor_test"
        style="@style/MaterialPreferences.Default"
        app:prefKey="sensor_test"
        app:prefSummary="@string/sensor_information_summary"
        app:prefTitle="@string/sensor_information" />

    <!-- Lists sensors, entries dynamically added -->
    <alexander.martinz.libs.materialpreferences.MaterialPreferenceCategory
        android:id="@+id/cat_sensors"
        style="@style/MaterialPreferences.Default"
        app:prefTitle="@string/sensors" />

</LinearLayout>
